# OGLhangman

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  nouns.txt
src/: calibri.c  eventSystem.h  eventSystem.t  fragshader.frag  helpers.cpp  helpers.h  vertshader.vert
src/glBoilerplateAndHelpers/: sprite.cpp  sprite.h  texture.cpp  texture.h
test/Google_tests/: CMakeLists.txt
test/Google_tests/unit_tests/events/: eventsSystemTest.cpp
